# ecommerce-price-tracker

./: .env.example  README.md  pyproject.toml  requirements.txt  test.py
backend/: database.py  main.py  models.py  schemas.py
backend/api/: crud_products.py  main.py  routes_products.py
backend/api/analytics/: crud.py  routes.py
backend/api/events/: crud.py  routes.py
backend/api/products/: crud.py  routes.py
backend/ingestion/: daily_ingestion.py  fetch_products.py  price_engine.py  seed_data.py  seed_events.py
frontend/: app.py
frontend/pages/: 1_Product_Overview.py  2_Price_History.py  3_Event_Impact.py
frontend/services/: api_client.py
scripts/: run_daily_ingestion.sh  setup.sh  setup_database.py
shared/: config.py  constants.py  event_rules.py
tests/: conftest.py
tests/integration/: test_daily_ingestion.py
tests/unit/: test_event_rules.py  test_price_engine.py
