[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-price-tracker"
version = "0.1.0"
description = "E-commerce price tracking and analytics system"
authors = [
    { name = "Hasan Erdin" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv>=1.0.0",
    "SQLAlchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "cryptography",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pymysql"
]

[tool.setuptools]
packages = ["backend", "shared"]